@@ -1,2 +1,18 @@
 # JavaFX-Expense-Tracker-
 I built this application to help users track their daily expenses, categorize them, set budgets, and analyze spending patterns with visual representations like pie charts and bar graphs. 
+ 
+
+--module-path "D:\Tools\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+
+--module-path "Path - FX jar File" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+Add Java FX file on Build Path- User Library
+
+ 
+
+ 
+Write click Go to Build Path then Go Libraray Check Class Path Can Contain Only Java FX path if you r Using Java Fx 
+
+ 
+Go to Eclipse Market Place download FX plugin
+
+ 
